<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_menu_favorite"
            android:title="@string/favorite" />
        <item
            android:id="@+id/nav_themes"
            android:icon="@drawable/ic_menu_theme"
            android:title="@string/themes" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/about_us" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_menu_rate"
                android:title="@string/rate_us" />
            <item
                android:id="@+id/nav_more"
                android:icon="@drawable/ic_menu_more"
                android:title="@string/more_apps" />
        </menu>
    </item>

</menu>
