<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.revittechnology.mullahnasruddin.MainActivity">

    <include layout="@layout/app_bar_main" />

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_mullah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    ads:srcCompat="@drawable/mullah" />

                <Button
                    android:id="@+id/button_pashto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pashto_jokes"
                    android:textColor="@color/button_text_color" />

                <Button
                    android:id="@+id/button_farsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/farsi_jokes"
                    android:textColor="@color/button_text_color" />

                <Button
                    android:id="@+id/button_english"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/english_jokes"
                    android:textColor="@color/button_text_color" />

                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/banner_home_footer" />
            </LinearLayout>

        </android.support.design.widget.CoordinatorLayout>

        <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@android:color/white"
            android:fitsSystemWindows="true"
            app:menu="@menu/activity_main_drawer" />

    </android.support.v4.widget.DrawerLayout>
</LinearLayout>